<resources>
    <string name="app_name" translatable="false">Educar</string>
    <string name="email_field">Email</string>
    <string name="password_field">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up">Register</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="register_success">User has been registered successfully!</string>
    <string name="register_fail">Failed to register! please try again!</string>
    <string name="ok">OK.</string>
    <string name="username">Username</string>
    <string name="ASCII" translatable="false"> !"#$%\'()*+,-./0123456789:;=>?@ABCDEFGHIJKLMNOPQRSTUVWXYZ[\\]^_`abcdefghijklmnopqrstuvwxyz{|}~</string>
    <string name="next">Next</string>
    <string name="school_name">School Name</string>
    <string name="bdate">Date Of Birth</string>
    <string name="bio" translatable="false">Biography </string>
    <string name="back">Back</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="profile_desc" translatable="false">Rowan Sebastian Atkinson CBE is an English actor,  comedian and screenwriter</string>
    <string name="profile_title" translatable="false">Mr Bean</string>
    <string name="posts" translatable="false">posts</string>
    <string name="followers" translatable="false">followers</string>
    <string name="following" translatable="false">following</string>
    <string name="msg_error_unable_select_profile_pic" translatable="false">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo" translatable="false">Set profile image</string>
    <string name="lbl_take_camera_picture" translatable="false">Take a picture</string>
    <string name="lbl_choose_from_gallery" translatable="false">Choose from gallery</string>
    <string name="toast_image_intent_null" translatable="false">Image picker option is missing!</string>
    <string name="what_do_you_want_to_say">What do you want to say?</string>
    <!-- font families -->
    <string name="font_family_light" translatable="false">sans-serif-light</string>
    <string name="font_family_medium" translatable="false">sans-serif-medium</string>
    <string name="font_family_regular" translatable="false">sans-serif</string>
    <string name="font_family_condensed" translatable="false">sans-serif-condensed</string>
    <string name="font_family_black" translatable="false">sans-serif-black</string>
    <string name="font_family_thin" translatable="false">sans-serif-thin</string>
    <string name="dialog_permission_title" translatable="false">Grant Permissions</string>
    <string name="dialog_permission_message" translatable="false">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings" translatable="false">GOTO SETTINGS</string>
    <string name="error_gif" translatable="false">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
    <string name="button_sure_default">Ok</string>
    <string name="button_sure">Ok(%1$d)</string>
    <string name="write_post_or_a_question">Write a post or ask a question.</string>
    <string-array name="occupations">
        <item>Student</item>
        <item>Tutor</item>
        <item>Tutor and Student</item>
    </string-array>
    <string-array name="warnings">
        <item>Full Name Is Required!</item>
        <item>Email Is Required!</item>
        <item>Please Provide Valid Email!</item>
        <item>Password Is Required!</item>
        <item>Password is short!</item>
        <item>Sorry we can not find an account with this email address!
        Please try again, or create a new account.</item>
        <item>The password is incorrect!</item>
        <item>Username is required!</item>
        <item>Please provide your school name</item>
    </string-array>
    <string-array name="messages">
        <item>Check your e-mail to verify your account</item>
        <item>Check your e-mail to reset Your password</item>
        <item>This e-mail is already connected to an account!</item>
        <item>Checking username...</item>
        <item>Sorry..Username is already taken!</item>
        <item>is available.</item>
        <item>Resend verification message.</item>
    </string-array>
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>


</resources>