<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
   >

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:id="@+id/appName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/app_photo"/>
    <EditText
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:id="@+id/editTextEmail"
        android:layout_below="@+id/appName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:hint="@string/email_field"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:textSize="24sp"
        android:importantForAutofill="no"
        android:digits="@string/ASCII"/>
    <EditText
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:id="@+id/editTextPassword"
        android:layout_below="@+id/editTextEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:hint="@string/password_field"
        android:inputType="textPassword"
        android:ems="10"
        android:textSize="24sp"
        android:importantForAutofill="no"
        android:digits="@string/ASCII"/>
    <Button
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/sign_in"
        android:id="@+id/sign_in"/>

        <Button
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_below="@+id/sign_in"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="#4D5454"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />

    <Button
        android:id="@+id/Register"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_in"
        android:layout_marginStart="290dp"
        android:layout_marginLeft="290dp"
        android:layout_marginTop="10dp"
        android:text="@string/register"
        android:textColor="#4D5454" />
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        android:layout_centerInParent="true"/>








</RelativeLayout>