<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonalInfo"
    android:orientation="vertical"
    android:weightSum="2" >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:background="@color/colorPrimary">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/profile"
            app:civ_border_color="#FFFFFF"
            app:civ_border_width="2dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profile_fullname"
            android:layout_below="@+id/profile_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textSize="30sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profile_username"
            android:layout_below="@+id/profile_fullname"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textSize="20sp"/>



    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.8"


        >


        <EditText
            android:id="@+id/schoolName"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/school_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/bDate"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/schoolName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:hint="@string/bdate"
            android:textSize="24sp" />
        <Spinner
            android:layout_width="380dp"
            android:layout_height="50dp"
            android:id="@+id/genderSpiner"
            android:layout_below="@id/bDate"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:entries="@array/genders"

            />



        <EditText
            android:id="@+id/bio"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/genderSpiner"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/bio"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="24sp" />


        <Button
            android:id="@+id/register"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bio"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/sign_up" />

        <Button
            android:id="@+id/goBack"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:text="@string/back"
            android:textColor="#4D5454" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="300dp"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>
